# tiny-update-notifier

./: Cargo.toml  README.md
.github/workflows/: check.yml
src/: lib.rs
