[package]
name = "tiny_update_notifier"
authors = ["Araxeus <oaeben@gmail.com>"]
version = "1.1.1"
edition = "2021"
description = "Tiny update notifier utility for rust cli programs"
homepage = "https://github.com/Araxeus/tiny_update_notifier"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Araxeus/tiny_update_notifier"
keywords = ["cli", "github", "update", "notify", "notifier", "informer", "notification"]
categories = ["command-line-utilities"]

[dependencies]
directories = "4.0.1"
notify-rust = "4.6.0"
serde_json = "1.0.91"
