[package]
name = "tiny_update_notifier"
authors = ["Araxeus <oaeben@gmail.com>"]
version = "2.2.0"
edition = "2021"
description = "Tiny update notifier utility for rust cli programs"
homepage = "https://github.com/Araxeus/tiny-update-notifier"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Araxeus/tiny-update-notifier"
keywords = ["cli", "update", "notify", "notifier", "informer"]
categories = ["command-line-utilities"]

[dependencies]
directories = "4.0.1"
notify-rust = "4.7.1"
serde_json = "1.0.93"
